workflows/asana-card/app/styles/_tasks.scss
/* ... */
.card-overlay {
  width: 100%;
  height: calc(100% - 50px);
  left: 0;
  top: 50px;
  position: fixed;
  background-color: rgba($deepBlue-100, .5);
  z-index: 999;
  display: none;

  &.active {
    display: block;
  }
}

.todo-input {
  width: 100%;
  height: $input-height;
  background-color: $studioGray-20;
  position: fixed;
  z-index: 9999;
  bottom: 0;
  left: 0;
  overflow: hidden;

  .task-add-icon {
    width: $input-height;
    height: $input-height;
    position: absolute;
    right: 0;
    bottom: 0;
    opacity: 0;
    @extend %flex;


    &.active {
      opacity: 1;

      .material-icons {
        transform: rotate(0deg);
        color: $deepBlue-60 !important;
        transition: .2s ease-in-out;
      }

      &:hover {
        background-color: $studioGray-40;
      }
    }
  }

  .date-picker-wrapper {
    position: fixed;
    left: 0;
    bottom: 120px;
    background-color: white;
    width: 100%;
    border-bottom: 1px solid $studioGray-20;
    transform: scale3d(1,0,1);
    transform-origin: 50% 100%;
    transition: .2s;

    > * {
      opacity: 0;
    }

    &.active {
      transform-origin: 50% 100%;
      transform: scale3d(1,1,1);
      transition: .2s;

      > * {
        opacity: 1;
      }
    }
  }

  .input-actions {
    width: 100%;
    height: 50px;
    background-color: white;
    margin-top: -50px;
    box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
    display: flex;
    transform: scale3d(1,0,1);
    transition: .2s;
    //display: none;

    &.active {
      //background-color: red;
      transform: scale3d(1,1,1);
      transition: .2s;

      > * {
        opacity: 1;
        transition: opacity 0s .2s;
      }
    }

    > * {
      transition: opacity 0s .2s;
      transition: background-color 0s 0s;
      opacity: 0;

      > * {
        color: $deepBlue-60 !important;
      }

      &:hover {
        transition: background-color 0s 0s;
        background-color: $studioGray-40;
      }
    }

    .schedule {
      width: 50%;
      height: 100%;

      @extend %flex;
    }

    .assign {
      width: 50%;
      height: 100%;

      @extend %flex;

      .action-bar-assign {
        width: 35px;
        height: 35px;
        padding: 15px 0;
        margin: 0 5px;
        border: 1px solid $deepBlue-60;
        border-radius: 50%;
        cursor: default;

        @extend %flex;

        .material-icons {
          margin-left: -2px;
          color: $deepBlue-60 !important;
          font-size: 16px !important;
          cursor: default !important;
        }

        &:hover {
          background-color: $deepBlue-60;

          .material-icons {
            color: white !important;
          }
        }
      }
    }
  }

  input {
    width: 100%;
    height: 100%;
    background-color: $studioGray-20;
    font-size: 13px;
    font-weight: 300;

    padding: 0 15px;
    padding-right: 55px;
    color: $deepBlue-60;
    letter-spacing: 1px;
    transition: .1s ease-in-out;

    &::-webkit-input-placeholder {
       color: $deepBlue-60;
       font-family: 'Roboto', Arial, Helvetica, sans-serif;
       font-weight: 400;
    }

    &:focus {
      color: white;
      background-color: $blue-100;
      transition: .1s ease-in-out;

      &::-webkit-input-placeholder {
         color: white;
         font-family: 'Roboto', Arial, Helvetica, sans-serif;
         font-weight: 300;
      }

      & + .task-add-icon {
        .material-icons {
          color: white !important;
        }
        &:hover{
          background-color: $blue-120;
        }
      }
    }
  }
}

.task-comment-wrapper {
  width: 100%;
  display: flex;
  align-items: center;
  border-bottom: 1px solid rgba($deepBlue-20, .3);

  .task-comment-avatar {
    width: 80px;
    height: 100%;

    @extend %flex;

    &.attachment {
      width: 60px;
      margin: 0 10px;

      img {
        width: 24px;
        height: 24px;
        border-radius: 0px;

        &.img-container {
          width: 40px;
          height: 40px;
        }
      }
    }

    img {
      width: 35px;
      height: 35px;
      border-radius: 50%;
    }
  }

  .task-comment {
    display: flex;
    //align-items: center;
    justify-content: center;
    flex-direction: column;
    width: calc(100% - 80px - 40px);
    min-height: 70px;
    padding: 10px 0;
    padding-right: 22.5px;
    font-size: 14px;
    color: $deepBlue-80;

    a {
      cursor: default;
    }

    .comment {

      .comments-url {
        overflow-wrap: break-word;
        word-wrap: break-word;
        -ms-word-break: break-all;
        word-break: break-all;
        word-break: break-word;
        -ms-hyphens: auto;
        -moz-hyphens: auto;
        -webkit-hyphens: auto;
        hyphens: auto;
      }
    }

    .time {
      padding-top: 5px;
      font-size: 11px;
      color: $deepBlue-40;
    }
  }

  .task-comment-dot {
    width: 65px;
    height: 100%;

    @extend %flex;

    .dot {
      width: 8px;
      height: 8px;
    }
  }
}
/* ... */

